# ds-workflow-template

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: __init__.py  main.py  schemas.py
docs/templates/: PR_checklist.md  experiment_template.md  model_card_template.md
feature_repo/: data_sources.py  feature_store.yaml  features.py
great_expectations/: gx.yaml
great_expectations/expectations/: sample_csv_suite.json
scripts/: ge_quickstart.py  register_model.py  train_baseline.py  validate_sample.py
src/ds_template/: __init__.py
src/ds_template/features/: __init__.py  build_features.py
src/ds_template/flows/: train_flow.py
src/ds_template/models/: train.py
tests/: test_point_in_time.py
